[package]
name = "jsonpath_rs"
version = "0.1.0"
authors = ["niap0r <zapf1@protonmail.com>"]
edition = "2018"

[lib]
name = "jsonpath_rs"
crate-type = ["cdylib"]

[dependencies]
serde = {version= "*", features = ["derive"] }
serde_json = "*"
jsonpath_lib = "0.2.5"

[dependencies.pyo3]
version = "0.11.1"
features = ["extension-module"]