[package]
name = "jsonpath_pyrs"
version = "0.0.2"
authors = ["niap0r <zapf1@protonmail.com>"]
edition = "2018"

[dependencies]
serde = {version= "*", features = ["derive"] }
serde_json = "*"
jsonpath_lib = "0.2.5"

[dependencies.pyo3]
version = "0.2.7"
default-features = false

[lib]
name = "jsonpath_pyrs"
crate-type = ["cdylib"]